RESOLVED FIXED299073
Some page elements have a blue flicker (caused by @starting-style)
https://bugs.webkit.org/show_bug.cgi?id=299073
Summary Some page elements have a blue flicker (caused by @starting-style)
Antti Koivisto
Reported 2025-09-18 02:29:22 PDT
Reduction <style> div { position: absolute; width: 100px; height: 100px; } @keyframes animation { from, to { margin-left: 0 } } @starting-style { .parent:after { } } .parent { animation: animation 1s; } .child:after { content: ""; position: absolute; inset: 0; background-color: black; animation: animation 1s; } </style> <div class="parent"> <div class="child"></div> </div>
Attachments
Antti Koivisto
Comment 1 2025-09-18 02:29:44 PDT
Antti Koivisto
Comment 2 2025-09-18 02:34:08 PDT
EWS
Comment 3 2025-09-18 10:42:19 PDT
Committed 300169@main (27e097a3c04d): <https://commits.webkit.org/300169@main> Reviewed commits have been landed. Closing PR #50921 and removing active labels.
Antti Koivisto
Comment 4 2025-09-19 00:28:36 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/54944
EWS
Comment 5 2025-09-19 03:11:10 PDT
Committed 297297.438@safari-7622-branch (65af04e610af): <https://commits.webkit.org/297297.438@safari-7622-branch> Reviewed commits have been landed. Closing PR #3674 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.