Some page elements have a blue flicker (caused by @starting-style) https://bugs.webkit.org/show_bug.cgi?id=299073 rdar://154228431

Reviewed by Alan Baradlay.

Seen in https://merlyndesignworks.co.uk/

Tests: imported/w3c/web-platform-tests/css/css-animations/parent-after-change-style-pseudo-element-flicker-ref.html
       imported/w3c/web-platform-tests/css/css-animations/parent-after-change-style-pseudo-element-flicker.html
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parent-after-change-style-pseudo-element-flicker-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parent-after-change-style-pseudo-element-flicker-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parent-after-change-style-pseudo-element-flicker.html: Added.
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolveAgainInDifferentContext):

We lose the pseudo-element bits when resolving after-change style via TreeResolver::resolveAfterChangeStyleForNonAnimated.

Fix by transferring the bits over to the new style when doing another round of resolving.
They are set by selector matching but here we are doing just style building.

As a drive-by fix, also transfer the pseudo-element name argument.

Canonical link: https://commits.webkit.org/300169@main